# agentes_crewAi

crew_analista_ia/: analise.md  main.ipynb
crew_colmeia/: main.ipynb  resultado.md
crew_colmeia/partial/: 0.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
crew_cotacao_dolar/: main.py
crew_equipe_juridica/: dados.yaml  main.py  peticao.md
crew_equipe_juridica/Equipe Juridica/: peticao.md
crew_escritor_artigos/: escritor.ipynb
crew_geracao_conteudos/: main.py  resultado.md
crew_geracao_conteudos/agents/: agenteDeAutomacaoEmail.py  agenteDeConteuto.py  agenteDeTopicos.py  agentePesquisador.py  agenteRevisor.py
crew_geracao_conteudos/crews/: crewPrincipal.py
crew_geracao_conteudos/tasks/: tarefaCriacaoDeConteudo.py  tarefaDePesquisa.py  tarefaDeTopicos.py  tarefaEnviarEmail.py  tarefaRevisarConteudo.py
crew_gerador_graficos/: main.py
crew_gerador_graficos/app/agents/: agenteDePesquisa.py  agenteGeradorDeGraficos.py
crew_gerador_graficos/app/crews/: crewEnergetica.py
crew_gerador_graficos/app/tasks/: geradorDeGraficosTask.py  pesquisaEnergeticaTask.py
crew_gerador_pdfs/: main.py
crew_institucional/app/: main.py
crew_institucional/data/: partial_output10.md  partial_output81.md  partial_output82.md
fluxo_e_crew/: README.md  pyproject.toml
fluxo_e_crew/src/fluxo_e_crew/: main.py
fluxo_estruturado/: flowWithAnd.py  flowWithOr.py  fluxo.html  main.py  plot.png.html
fluxo_matematico/: main.py
fluxo_nao_estruturado/: fluxo.html  main.py
fluxo_reflexion/: artigo.md  main.py  referencias.md  validacao.md
fluxo_roteamento/: main.py
(+22 files in other folders)
