[project]
name = "fluxo_e_crew"
version = "0.1.0"
description = "fluxo_e_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
]

[project.scripts]
kickoff = "fluxo_e_crew.main:kickoff"
plot = "fluxo_e_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
